--- a/backend/src/resources/views/setting.hbs
+++ b/backend/src/resources/views/setting.hbs
@@ -1,4 +1,4 @@
-<form method="post" action="/?_method=PUT" class="setting_container">
+<form method="post" action="/" class="setting_container">
         <p>SETTING</p>
         <div class="menu">
             <div class="selc">
