update login with session

--- a/backend/src/resources/views/layouts/main.hbs
+++ b/backend/src/resources/views/layouts/main.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>King_Of_Melody</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="assets/main.css">
+    <link rel="stylesheet" href="../../../assets/main.css">
     <script src="https://kit.fontawesome.com/d3a938e050.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ef9bfced87.js" crossorigin="anonymous"></script>
 </head>
