--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -137,6 +137,10 @@ body{
     cursor: pointer;
     background: none;
     text-decoration: none;
+    border: none;
+    font-family: neosans;
+    color: white;
+    font-size: 1em;
 }
 
 #header .subnav .profile:hover, 
