--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -198,7 +198,7 @@
 
                     <div class="select_rank_mode_button">
                         <button class="createclick" id = "create_room"><b>Tạo phòng</b></button>
-                        <button class="playclick"><b><a href="playmulti">Vào nhanh</a></b></button>
+                        <button class="playclick"><b><a href="/playmulti">Vào nhanh</a></b></button>
                     </div>
                 </div>
 
