--- a/backend/src/resources/views/playmulti.hbs
+++ b/backend/src/resources/views/playmulti.hbs
@@ -35,7 +35,7 @@
                     </div>
                     <div class="player2-info">
                         <div class="player2-info-illustrator">
-                            <img src="assets/img/ava-crop.png" alt="">
+                            <img src="/assets/img/ava-crop.png" alt="">
                             <div class="score-parallelogram">
                                 <div class="score-wrapper">
                                     <h2 class="score-label">1000</h2> 
@@ -48,7 +48,7 @@
                 
                 <div class="disc">
                     
-                    <img src="assets/img/dianhac2.png" class="discimg" alt="disc">
+                    <img src="/assets/img/dianhac2.png" class="discimg" alt="disc">
                     
                     <div class="btn">
                         <div><input type="range" value="0" id="progress"></div>
