--- a/backend/src/resources/views/playsingle.hbs
+++ b/backend/src/resources/views/playsingle.hbs
@@ -71,7 +71,7 @@
                 
                 <div class="disc">
                     {{!-- <audio src="data:audio/mpeg;base64,{{curSong.content}}" id="audio" autoplay controls></audio> --}}
-                    <img src="assets/img/dianhac2.png" class="discimg" alt="disc">
+                    <img src="/assets/img/dianhac2.png" class="discimg" alt="disc">
                     
                     <div class="btn">
                         <div><input type="range" value="0" id="progress"></div>
