--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -114,7 +114,7 @@
                     <img src="/assets/img/Waste_land.jpg" alt="" class="Waste_land">
                 </div>
             </div>
-            <form action="playsingle/?_method=PUT" method="post">
+            <form action="/playsingle" method="get">
             <div class="select_normal_mode_radio">
                 <label  class="container">Khó
                     <input type="radio"  name ="mode" value="hard" checked="checked" >
