--- a/assets/playweb.css
+++ b/assets/playweb.css
@@ -10,6 +10,7 @@
     font-family: neosans;
 }
 
+
 body {
     background: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
     height: 100vh;
@@ -73,7 +74,7 @@ body {
     /* position: absolute; */
     /* left: 50%;
     top: 0; */
-    width: calc(200/3) %;
+    width: calc(200/3) em;
 }
 
 .container .play-area img{
@@ -140,7 +141,7 @@ body {
 }
 
 .container .disc .btn #progress {
-    -webkit-appearance: none;
+    /* -webkit-appearance: none; */
     width: 20em;
     height: 0.3em;
     background: #f53192;
@@ -218,4 +219,5 @@ body {
     font-size: 1em;
     background: linear-gradient(132deg, rgb(168,98,230), rgb(122, 57, 214), rgb(69,6, 191),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(168, 228, 236));
 }
+
 
