--- a/backend/src/assets/playweb-multi.css
+++ b/backend/src/assets/playweb-multi.css
@@ -189,6 +189,23 @@ body {
     justify-content: center;
 }
 
+.container .disc .discimg{
+    animation-name: rotate;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-play-state: paused;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
 .container .disc .btn #progress {
     -webkit-appearance: none;
     width: 20em;
