--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -18,7 +18,7 @@
                         </p>
                         <div class="subnav" id = "subnav">
                             <div class="background">
-                                <a href="profile">
+                                <a href="/profile/{{userId}}">
                                     <div class="profile">HỒ SƠ</div>
                                 </a>
                                 <form action="/home/logout" method="post">
@@ -59,7 +59,7 @@
     <div id="footer">
         <div class="menu_btn">
                 <button type="submit" class="menu_btn_btn" >
-                    <a href="setting" class="menu_btn_dt">
+                    <a href="/setting/{{userId}}" class="menu_btn_dt">
                         <i class="fa-solid fa-gear"></i>
                         <span><b>CÀI ĐẶT</b></span>
                     </a>
