--- a/backend/src/resources/views/playmulti.hbs
+++ b/backend/src/resources/views/playmulti.hbs
@@ -20,10 +20,10 @@
                 <div class="info">
                     <div class="player1-info">
                         <div class="player1-info-illustrator">
-                            <img src="assets/img/ava-crop.png" alt="">
+                            <img src="/assets/img/ava-crop.png" alt="">
                             <div class="score-parallelogram">
                                 <div class="score-wrapper">
-                                    <h2 class="score-label" id="Score_player1">0</h2> 
+                                    <h2 class="score-label" id="Score_player1">1000</h2> 
                                 </div>
                             </div>
                         </div>
@@ -44,7 +44,7 @@
                             <img src="/assets/img/ava-crop.png" alt="">
                             <div class="score-parallelogram">
                                 <div class="score-wrapper">
-                                    <h2 class="score-label" id="Score_player2">1000</h2> 
+                                    <h2 class="score-label" id="Score_player1">1000</h2> 
                                 </div>
                             </div>
                         </div>
@@ -54,15 +54,15 @@
                 
                 <div class="disc">
                     
-                    <img src="/assets/img/dianhac2.png" class="discimg" alt="disc" id="music_disc">
+                    <img src="/assets/img/dianhac2.png" class="discimg" alt="disc">
                     
                     <div class="btn">
-                        <div><input type="range" value="0" id="progress"></div>
+                        <div><input type="range" min="0" max="100" value="30" id="progress"></div>
                         
                         <div id="progress-control">
-                            <div><i class="fa-solid fa-volume-low" id="decrease-volume"></i></div>
+                            <div><i class="fa-solid fa-volume-low" id="increase-volume"></i></div>
                             <div><i class="fa-solid fa-pause" id="ctrlIcon"></i></div>
-                            <div><i class="fa-solid fa-volume-high" id="increase-volume"></i></div>
+                            <div><i class="fa-solid fa-volume-high" id="decrease-volume"></i></div>
                         </div>
                     </div>
                     
