--- a/backend/src/resources/views/playsingle.hbs
+++ b/backend/src/resources/views/playsingle.hbs
@@ -70,6 +70,79 @@
                 </div>
             </div>
         </div>
+        {{!-- <div class="modal">
+            <div class="modal-correct-answer">
+                <h2 class="label">
+                    Bạn đã đoán đúng tên bài hát.
+                </h2>
+                <div class="gif-img">
+                    <img src="../../assets/img/200w.gif" alt="">
+                    {{!-- <p><a href="https://giphy.com/gifs/5VKbvrjxpVJCM">via GIPHY</a></p> --}}
+                </div>
+                <div class="point-gain">
+                    <h2 class="point">
+                        Điểm nhận được
+                    </h2>
+                </div>
+                <button class="nextroundBtn">Vòng tiếp theo</button>
+            </div>
+            <div class="modal-wrong-answer">
+                <h2 class="label">
+                    Bạn đã đoán sai tên bài hát
+                </h2>
+                <div class="gif-img">
+                    {{!-- <img src="https://giphy.com/embed/xMFAPwvgAK1Lj1EmEM" alt=""> --}}
+                    <iframe src="https://giphy.com/embed/xMFAPwvgAK1Lj1EmEM" frameBorder="0" class="giphy-embed" style="pointer-events: none;"></iframe>
+                    {{!-- <img src="../../assets/img/200w.gif" alt=""> --}}
+                    {{!-- <p><a href="https://giphy.com/gifs/5VKbvrjxpVJCM">via GIPHY</a></p> --}}
+                </div>
+                <div class="answer-container">
+                    <h2 class="answer">
+                        Đáp án 
+                    </h2>
+                </div>
+                <button class="linksong"><a href="">Thưởng thức bài hát</a></button>
+                <button class="nextroundBtn">Vòng tiếp theo</button>
+            </div>
+            <div class="modal-end">
+                <h2 class="label">
+                    Trò chơi kết thúc
+                </h2>
+                {{!-- <div class="gif-img">
+                    <iframe src="https://giphy.com/embed/OcG0F2nFdjwBjlPogU" 
+                    frameBorder="0" class="giphy-embed-1" 
+                    style="pointer-events: none;"></iframe>
+                    <iframe src="https://giphy.com/embed/OcG0F2nFdjwBjlPogU" 
+                    frameBorder="0" class="giphy-embed-2" 
+                    style="pointer-events: none;"></iframe>
+                </div> --}}
+                <div class="statistic">
+                    <iframe src="https://giphy.com/embed/OcG0F2nFdjwBjlPogU" 
+                    frameBorder="0" class="giphy-embed-1" 
+                    style="pointer-events: none;"></iframe>
+                    <div class="content">
+                        <h2 class="round">
+                            Số vòng đoán đúng 
+                        </h2>
+                        <h2 class="round-details">
+                            Số vòng đoán đúng 
+                        </h2>
+                        <h2 class="point">
+                            Điểm đạt được
+                        </h2>
+                        <h2 class="point-details">
+                            Điểm đạt được
+                        </h2>
+                    </div>
+                     <iframe src="https://giphy.com/embed/OcG0F2nFdjwBjlPogU" 
+                    frameBorder="0" class="giphy-embed-2" 
+                    style="pointer-events: none;"></iframe>
+                </div>
+                <button class="return-home"><a href="/home/:userId">Trở về trang chủ</a></button>
+                <button class="replay">Chơi lại</button>
+            </div>
+        </div> --}}
+        
         <input type="hidden" id="songsInput" data-songs="{{songs}}">
         <script src="playsingleplayer.js"></script>
     </body>
