--- a/backend/src/resources/views/profile.hbs
+++ b/backend/src/resources/views/profile.hbs
@@ -14,7 +14,7 @@
                 <div class="side_nav">
                     <div class="menu"></div>
                     <div class="back_main">
-                        <a href="/">
+                        <a href="/home/{{userId}}">
                             <span class="material-symbols-outlined">
                                 arrow_back
                             </span>
@@ -26,7 +26,7 @@
                     <div class="player" >
                         <div class="nav">
                             <div class = "username" id = "username">
-                                <img src="assets/img/Avatar_header.jpg" alt="" >
+                                <img src="/assets/img/Avatar_header.jpg" alt="" >
                                 <span id="user_logo">KING_OF_MELODY</span>
                                 <span class="material-symbols-outlined" id="icon_nar">
                                     keyboard_arrow_up
@@ -51,7 +51,7 @@
             <div class="container_ctx">
                 <div class="profile_header">
                     <div class="div_gif">
-                        <img src="assets/img/toothless-dancing-toothless.gif" alt="" class="img_gif">
+                        <img src="/assets/img/toothless-dancing-toothless.gif" alt="" class="img_gif">
                     </div>
                     <div class="profile_header_aside">
                         <div class="profile_userrank">rank</div>
