--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -1,12 +1,13 @@
 *{
     padding: 0;
     /* margin: 0; */
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
     box-sizing: border-box;
 }
 
 :root{
     --background: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
+    height: 100bh;
 }
 
 @font-face {
@@ -18,7 +19,7 @@ body{
     position: relative;
     font-family: neosans;
     background-image: linear-gradient(132deg, rgb(228, 157, 252), rgb(168,98,230), rgb(122, 57, 214), rgb(95, 30, 203), rgb(69,6, 191),rgb(61,7,185),rgb(65,19,185), rgb(71, 60, 190), rgb(77, 99, 197), rgb(84, 132, 208), rgb(109, 162, 214), rgb(131, 188, 221), rgb(168, 228, 236));
-    height: 100%;
+    height: 100vh;
     background-repeat: no-repeat; 
     background-size: cover;
 }
@@ -26,7 +27,7 @@ body{
 #header {
     height: 80px;
     display: flex;
-    width: 100%;
+    /* width: 100%; */
     position: sticky;
     justify-content: space-between;
     padding: 0 10px 0 10px;
@@ -313,6 +314,15 @@ body{
 #footer .menu_btn_dt{
     display: block;
 }
+
+#footer .menu_btn .menu_btn_btn .fa-gear {
+    margin-bottom: 10px;
+}
+
+#footer .menu_btn .menu_btn_btn .fa-book {
+    margin-bottom: 10px;
+}
+
 #footer .menu_btn .menu_btn_btn:hover .menu_btn_dt{
     color:darkgray;
 }
@@ -323,7 +333,7 @@ body{
     color: aliceblue;
 }
 #footer .menu_btn .menu_btn_btn .menu_btn_dt span{
-    margin-top: 0.5rem;
+    /* margin-top: 0.5rem; */
     font-family: neosans;
 }
 #footer .para{
