--- a/backend/src/resources/views/home.hbs
+++ b/backend/src/resources/views/home.hbs
@@ -133,8 +133,7 @@
             </div>
 
             <div class="select_normal_mode_play_button">
-                <button type="submit"  class="playclick"><b>PLAY</b></button>
-                <button type="submit"  class="resumeclick"><b><a href="playsingle">RESUME</a></b></button>
+                <button type="submit"  class="playclick" href="/playsingle"><b>PLAY</b></button>
             </div>
 
             </form>
