--- a/backend/src/resources/views/playsingle.hbs
+++ b/backend/src/resources/views/playsingle.hbs
@@ -47,19 +47,15 @@
                 
                 <div class="disc">
                     {{!-- <audio src="data:audio/mpeg;base64,{{curSong.content}}" id="audio" autoplay controls></audio> --}}
-                    <img src="/assets/img/dianhac2.png" class="discimg" alt="disc">
+                    <img src="/assets/img/dianhac2.png" class="discimg" id="music_disc" alt="disc">
                     
                     <div class="btn">
                         <div><input type="range" value="0" id="progress"></div>
                         
-                        <div id="progress-control">
-
-                            <div><i class="fa-solid fa-backward"></i></div>
-                            <div class="btn-play-pause"><i class="fa-solid fa-play"></i></div>    
-                            <div><i class="fa-solid fa-forward"></i></div>
-                            <div><i class="fa-solid fa-volume-low" id="increase-volume"></i></div>
+                        <div id="progress-control"> 
+                            <div><i class="fa-solid fa-volume-low" id="decrease-volume"></i></div>
                             <div><i class="fa-solid fa-pause" id="ctrlIcon"></i></div>
-                            <div><i class="fa-solid fa-volume-high" id="decrease-volume"></i></div>
+                            <div><i class="fa-solid fa-volume-high" id="increase-volume"></i></div>
                         </div>
                     </div>
                     
@@ -70,7 +66,7 @@
                 </div>
             </div>
         </div>
-        {{!-- <div class="modal">
+        <!-- <div class="modal">
             <div class="modal-correct-answer">
                 <h2 class="label">
                     Bạn đã đoán đúng tên bài hát.
@@ -141,7 +137,7 @@
                 <button class="return-home"><a href="/home/:userId">Trở về trang chủ</a></button>
                 <button class="replay">Chơi lại</button>
             </div>
-        </div> --}}
+        </div> -->
         
         <input type="hidden" id="songsInput" data-songs="{{songs}}">
         <script src="playsingleplayer.js"></script>
