--- a/backend/src/resources/views/playsingle.hbs
+++ b/backend/src/resources/views/playsingle.hbs
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>King of Melody</title>
-        <link rel="stylesheet" href="../assets/playweb.css">
+        <link rel="stylesheet" href="../../assets/playweb.css">
         <script src="https://kit.fontawesome.com/d42216d8d0.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js" 
         integrity="sha512-6+YN/9o9BWrk6wSfGxQGpt3EUK6XeHi6yeHV+TYD2GR0Sj/cggRpXr1BrAQf0as6XslxomMUxXp2vIl+fv0QRA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -52,11 +52,7 @@
                     <div class="btn">
                         <div><input type="range" value="0" id="progress"></div>
                         
-                        <div id="progress-control">
-
-                            <div><i class="fa-solid fa-backward"></i></div>
-                            <div class="btn-play-pause"><i class="fa-solid fa-play"></i></div>    
-                            <div><i class="fa-solid fa-forward"></i></div>
+                        <div id="progress-control">  
                             <div><i class="fa-solid fa-volume-low" id="increase-volume"></i></div>
                             <div><i class="fa-solid fa-pause" id="ctrlIcon"></i></div>
                             <div><i class="fa-solid fa-volume-high" id="decrease-volume"></i></div>
@@ -68,6 +64,76 @@
                     <input type="text" id="answer_song" placeholder="Nhập tên bài hát">
                     <button id="guessButton">Đoán</button>
                 </div>
+            </div>
+        </div>
+        <div id="end-model">
+            <div class="bg-model">
+                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
+                <div class="end-model-content">
+                    <h2>Trò chơi kết thúc!</h2>
+                    <h3 id="end-model-score">Điểm của bạn: <span id="endpoint"></span> </h3>
+                </div>
+                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
+            </div>
+            <div class="img-model">
+                <img src="/assets/img/zero-two-02.gif" alt="" id="img-model-ava">
+            </div>
+            <div class="btn-model">
+                <button class="home-btn" id="btn-detail" >
+                    <span id="btn">
+                        <h3>Chi tiết</h3>
+                    <span>
+                </button>
+                <button class="home-btn">
+                    <a href="" class="home-btn-a">
+                        <h3>Chơi tiếp</h3>
+                    </a>
+                </button>
+                <button class="home-btn">
+                    <a href="/home" class="home-btn-a">
+                        <h3>Trang chủ</h3>
+                    </a>
+                </button>
+            </div>
+        </div>
+        <div id="detail-model">
+            <div class="bg-model">
+                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
+                <div class="header">
+                    <div class="end-model-content">
+                        <h3 id="end-model-score">Điểm của bạn: <span id="detailendpoint"></span> </h3>
+                    </div>
+                    <div class="num-ans">
+                        <h3>Đúng: <span id="num-r"></span></h3>
+                        <h3>Sai: <span id="num-w"></span></h3>
+                    </div>
+                </div>
+                <img src="/assets/img/music-wave.gif" alt="" class="rank_img">
+            </div>
+            <div class="song-detail">
+                <h2>Thông Tin Bài hát</h2>
+                {{#each infolist}}
+                <div class="songlist">
+                    <a href="{{this.link}}" target="_blank"><p>    {{this.name}} - {{this.singer}}</p></a>
+                </div>
+                {{/each}}
+            </div>
+            <div class="btn-model">
+                <button class="home-btn-1" id="return">
+                    <a href="" class="home-btn-a">
+                        <h3>Trở lại</h3>
+                    </a>
+                </button>
+                <button class="home-btn-1">
+                    <a href="" class="home-btn-a">
+                        <h3>Chơi tiếp</h3>
+                    </a>
+                </button>
+                <button class="home-btn-1">
+                    <a href="/home" class="home-btn-a">
+                        <h3>Trang chủ</h3>
+                    </a>
+                </button>
             </div>
         </div>
         <input type="hidden" id="songsInput" data-songs="{{songs}}">
